python/json conversion of pubgen

--- a/pubs-G.html
+++ b/pubs-G.html
@@ -3,26 +3,20 @@
 </head>
 <body><h3>William W. Cohen's Papers: GNAT System</h3>
 <ol>
-<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2017): <a href="http://arxiv.org/abs/1703.01557">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/BingCD17">IJCAI 2017</a>.
+<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2017): <a href="http://arxiv.org/abs/1703.01557">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in IJCAI 2017.
 </li>
-<li>Lidong Bing, Bhuwan Dhingra, Kathryn Mazaitis, Jong Hyuk Park, William W. Cohen (2017): <a href="http://arxiv.org/abs/1606.03398">Bootstrapping Distantly Supervised IE using Joint Learning and Small Well-structured Corpora</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/aaai/BingDMPC17">AAAI 2017</a>.
+<li>Lidong Bing, Bhuwan Dhingra, Kathryn Mazaitis, Jong Hyuk Park, William W. Cohen (2017): <a href="http://arxiv.org/abs/1606.03398">Bootstrapping Distantly Supervised IE using Joint Learning and Small Well-structured Corpora</a> in AAAI 2017.
 </li>
-<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2016): <a href="postscript/wakbc-2016.pdf">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/akbc/BingCDW16">WAKBC-2016</a>.
+<li>Lidong Bing, William W. Cohen, Bhuwan Dhingra, and Richard C. Wang (2016): <a href="postscript/wakbc-2016.pdf">Using Graphs of Classifiers to Impose Constraints on Semi-supervised Relation Extraction</a> in WAKBC-2016.
 </li>
-<li>William Yang Wang and William W. Cohen (2016): <a href="postscript/ijcai-2016-yww.pdf">Learning First-Order Logic Embeddings via Matrix Factorization</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/WangC16">IJCAI-2016</a>.
+<li>William Yang Wang and William W. Cohen (2016): <a href="postscript/ijcai-2016-yww.pdf">Learning First-Order Logic Embeddings via Matrix Factorization</a> in IJCAI-2016.
 </li>
-<li>Zhilin Yang, Ruslan Salakhutdinov, William Cohen (2016): <a href="http://arxiv.org/abs/1603.08861">Revisiting Semi-Supervised Learning with Graph Embeddings</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangCS16">ICML-2016</a>.
+<li>Zhilin Yang, Ruslan Salakhutdinov, William Cohen (2016): <a href="http://arxiv.org/abs/1603.08861">Revisiting Semi-Supervised Learning with Graph Embeddings</a> in ICML-2016.
 </li>
-<li>Lidong Bing, Mingyang Ling, Richard C. Wang, William W. Cohen (2016): <a href="postscript/aaai-2016.pdf">Distant IE by Bootstrapping Using Lists and Document Structure</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/BingLWC16">AAAI-2016</a>.
+<li>Lidong Bing, Mingyang Ling, Richard C. Wang, William W. Cohen (2016): <a href="postscript/aaai-2016.pdf">Distant IE by Bootstrapping Using Lists and Document Structure</a> in AAAI-2016.
 </li>
-<li>Lidong Bing, Sneha Chaudhari, Richard C. Wang, and William W. Cohen (2015): <a href="postscript/emnlp-2015-baidu.pdf">Improving Distant Supervision for Information Extraction Using Label Propagation Through Lists</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/emnlp/BingCWC15">EMNLP-2015</a>.
+<li>Lidong Bing, Sneha Chaudhari, Richard C. Wang, and William W. Cohen (2015): <a href="postscript/emnlp-2015-baidu.pdf">Improving Distant Supervision for Information Extraction Using Label Propagation Through Lists</a> in EMNLP-2015.
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2090677-1;
-urchinTracker();
-</script>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-G.html">GNAT System</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 </body></html>
