--- a/pubs-d.html
+++ b/pubs-d.html
@@ -3,60 +3,54 @@
 </head>
 <body><h3>William W. Cohen's Papers: Intelligent Tutoring</h3>
 <ol>
-<li>Nan Li, Noboru Matsuda, William W. Cohen, Kenneth R. Koedinger  (2015): <a href="postscript/simstudent-aij-2014.pdf">Integrating representation learning and skill learning in a human-like intelligent agent</a> in <a href="http://www.sciencedirect.com/science/article/pii/S0004370214001349">Artificial Intelligence, 2015, pp. 67-91</a>.
+<li>Nan Li, Noboru Matsuda, William W. Cohen, Kenneth R. Koedinger  (2015): <a href="postscript/simstudent-aij-2014.pdf">Integrating representation learning and skill learning in a human-like intelligent agent</a> in Artificial Intelligence, 2015, pp. 67-91.
 </li>
-<li>Noboru Matsuda, Gabriel Stylianides, William W. Cohen, & Ken R. Koedinger (2014): <i>Using a Synthetic Peer to Investigate the Effect of Competitive Learning by Teaching in Mathematics Paper</i> in <a href="recent.html">AERA-2014</a>.
+<li>Noboru Matsuda, Gabriel Stylianides, William W. Cohen, & Ken R. Koedinger (2014): <a href="postscript/">Using a Synthetic Peer to Investigate the Effect of Competitive Learning by Teaching in Mathematics Paper</a> in AERA-2014.
 </li>
-<li>N. Matsuda, C. L. Griger, N. Barbalios, G. Stylianides, W. W. Cohen, & K. R. Koedinger. (2014): <a href="http://www.simstudent.org/publications/its2014a">Investigating the Effect of Meta-Cognitive Scaffolding for Learning by Teaching. </a> in <a href="http://link.springer.com/chapter/10.1007%2F978-3-319-07221-0_13">ITS-2014</a>.
+<li>N. Matsuda, C. L. Griger, N. Barbalios, G. Stylianides, W. W. Cohen, & K. R. Koedinger. (2014): <a href="http://www.simstudent.org/publications/its2014a">Investigating the Effect of Meta-Cognitive Scaffolding for Learning by Teaching. </a> in ITS-2014.
 </li>
-<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="http://link.springer.com/article/10.1007%2Fs40593-013-0005-5">Problem Order Implications for Learning</a> in <a href="recent.html">IJAIE</a>.
+<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="http://link.springer.com/article/10.1007%2Fs40593-013-0005-5">Problem Order Implications for Learning</a> in IJAIE.
 </li>
-<li>Noboru Matsuda, E. Yarzebinski, V. Keiser, R. Raizada, William W. Cohen, G. J. Stylianides, & K. R. Koedinger (2013): <a href="http://www.simstudent.org/publications/edpsych2013">Cognitive anatomy of tutor learning: Lessons learned with SimStudent. </a> in <a href="recent.html">Journal of Ed Psych, 105(4), 1152-1163. doi: 10.1037/a0031955. </a>.
+<li>Noboru Matsuda, E. Yarzebinski, V. Keiser, R. Raizada, William W. Cohen, G. J. Stylianides, & K. R. Koedinger (2013): <a href="http://www.simstudent.org/publications/edpsych2013">Cognitive anatomy of tutor learning: Lessons learned with SimStudent. </a> in Journal of Ed Psych, 105(4), 1152-1163. doi: 10.1037/a0031955. .
 </li>
-<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/edm-2013.pdf">Discovering Student Models With A Clustering Algorithm Using Problem Content    </a> in <a href="http://www.educationaldatamining.org/EDM2013/papers/rn_paper_16.pdf">EDM-2013</a>.
+<li>Nan Li, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/edm-2013.pdf">Discovering Student Models With A Clustering Algorithm Using Problem Content    </a> in EDM-2013.
 </li>
-<li>Nan Li, Yanduong Tian, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/aied-2013.pdf">Integrating Perceptual Learning With External World Knowledge In A Simulated Student</a> in <a href="http://dx.doi.org/10.1007/978-3-642-39112-5_41">AIED-2013</a>.
+<li>Nan Li, Yanduong Tian, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/aied-2013.pdf">Integrating Perceptual Learning With External World Knowledge In A Simulated Student</a> in AIED-2013.
 </li>
-<li>Nan Li, Eliane Stampfer, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/cogsci-2013.pdf">Efficient Cross-Domain Cognitive Model Discovery Using A Simulated Student</a> in <a href="recent.html">CogSci-2013</a>.
+<li>Nan Li, Eliane Stampfer, William W. Cohen, and Ken Koedinger (2013): <a href="postscript/cogsci-2013.pdf">Efficient Cross-Domain Cognitive Model Discovery Using A Simulated Student</a> in CogSci-2013.
 </li>
-<li>Nan Li, William W. Cohen, Kenneth R. Koedinger (2012): <a href="postscript/ecml-2012-nan.pdf">Learning to Perceive Two-Dimensional Displays Using Probabilistic Grammars</a> in <a href="recent.html">ECML-2012</a>.
+<li>Nan Li, William W. Cohen, Kenneth R. Koedinger (2012): <a href="postscript/ecml-2012-nan.pdf">Learning to Perceive Two-Dimensional Displays Using Probabilistic Grammars</a> in ECML-2012.
 </li>
-<li>Nan Li, Abraham Schreiber, William W. Cohen, Kenneth R. Koedinger (2012): <a href="postscript/ecai-2012.pdf">Creating Features from a Learned Grammar in a Simulated Student</a> in <a href="http://dx.doi.org/10.3233/978-1-61499-098-7-534">ECAI-2012</a>.
+<li>Nan Li, Abraham Schreiber, William W. Cohen, Kenneth R. Koedinger (2012): <a href="postscript/ecai-2012.pdf">Creating Features from a Learned Grammar in a Simulated Student</a> in ECAI-2012.
 </li>
-<li>Nan Li and William W. Cohen and Kenneth R. Koedinger and Noboru Matsuda (2011): <a href="postscript/edm-2011.pdf">A Machine Learning Approach for Automatic Student Model Discovery</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/edm/LiCKM11">EDM-2011</a>.
+<li>Nan Li and William W. Cohen and Kenneth R. Koedinger and Noboru Matsuda (2011): <a href="postscript/edm-2011.pdf">A Machine Learning Approach for Automatic Student Model Discovery</a> in EDM-2011.
 </li>
-<li>Noboru Matsuda, Evelyn Yarzebinski, Victoria Keiser, Rohan Raizada, Gabriel J. Stylianides, William W. Cohen, Kenneth R. Koedinger (2011): <a href="postscript/aied-2011.pdf">Learning by Teaching SimStudent - An Initial Classroom Baseline Study comparing with Cognitive Tutor</a> in <a href="http://dx.doi.org/10.1007/978-3-642-21869-9_29">AIED-2011</a>.
+<li>Noboru Matsuda, Evelyn Yarzebinski, Victoria Keiser, Rohan Raizada, Gabriel J. Stylianides, William W. Cohen, Kenneth R. Koedinger (2011): <a href="postscript/aied-2011.pdf">Learning by Teaching SimStudent - An Initial Classroom Baseline Study comparing with Cognitive Tutor</a> in AIED-2011.
 </li>
-<li>Nan Li, William W. Cohen, and Kenneth R. Koedinger (2010): <a href="postscript/its-2010-nanli.pdf">A Computational Model of Accelerated Future Learning through Feature Recognition</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/its/its2010-2.html#LiCK10">ITS-2010 (poster)</a>.
+<li>Nan Li, William W. Cohen, and Kenneth R. Koedinger (2010): <a href="postscript/its-2010-nanli.pdf">A Computational Model of Accelerated Future Learning through Feature Recognition</a> in ITS-2010 (poster).
 </li>
-<li>Noboru Matsuda, Victoria Keiser, Rohan Raizada, Arthur Tu, Gabriel Stylianides, William W. Cohen, Kenneth R. Koedinger (2010): <a href="postscript/its-2010-noboru.pdf">Learning by Teaching SimStudent: Technical Accomplishments and an Initial Use with Students</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/its/its2010-1.html#MatsudaKRTSCK10">ITS-2010</a>.
+<li>Noboru Matsuda, Victoria Keiser, Rohan Raizada, Arthur Tu, Gabriel Stylianides, William W. Cohen, Kenneth R. Koedinger (2010): <a href="postscript/its-2010-noboru.pdf">Learning by Teaching SimStudent: Technical Accomplishments and an Initial Use with Students</a> in ITS-2010.
 </li>
-<li>Noboru Matsuda, Andrew Lee, William W. Cohen, and Ken Koedinger (2009): <a href="postscript/cogsci-2009.pdf">A Computational Model of How Learner Errors Arise from Weak Prior Knowledge</a> in <a href="recent.html">CogSci-2009</a>.
+<li>Noboru Matsuda, Andrew Lee, William W. Cohen, and Ken Koedinger (2009): <a href="postscript/cogsci-2009.pdf">A Computational Model of How Learner Errors Arise from Weak Prior Knowledge</a> in CogSci-2009.
 </li>
-<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Gustavo Lacerda, Kenneth Koedinger (2008): <a href="postscript/simstudent-authoring-submitted.pdf">SimStudent: Building an Intelligent Tutoring System by Tutoring a Synthetic Student</a> in <a href="recent.html">limbo</a>.
+<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Gustavo Lacerda, Kenneth Koedinger (2008): <a href="postscript/simstudent-authoring-submitted.pdf">SimStudent: Building an Intelligent Tutoring System by Tutoring a Synthetic Student</a> in limbo.
 </li>
-<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Gustavo Lacerda, and Kenneth R. Koedinger (2008): <a href="postscript/its-2008-final.pdf">Why Tutored Problem Solving may be better than Example Study: Theoretical Implications from a Simulated-Student Study</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/its/its2008.html#MatsudaCSLK08">ITS-2008</a>.
+<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Gustavo Lacerda, and Kenneth R. Koedinger (2008): <a href="postscript/its-2008-final.pdf">Why Tutored Problem Solving may be better than Example Study: Theoretical Implications from a Simulated-Student Study</a> in ITS-2008.
 </li>
-<li>Noboru Matsuda, William Cohen, Jonathan Sewall, Gustavo Lacerda and Ken Koedinger (2007): <a href="http://www.cs.cmu.edu/~mazda/Doc/AIED2007/index.htm">Predicting students performance with a SimStudent that learns cognitive skills from observation</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aied/aied2007.html#MatsudaCSLK07">AIED-2007</a>.
+<li>Noboru Matsuda, William Cohen, Jonathan Sewall, Gustavo Lacerda and Ken Koedinger (2007): <a href="http://www.cs.cmu.edu/~mazda/Doc/AIED2007/index.htm">Predicting students performance with a SimStudent that learns cognitive skills from observation</a> in AIED-2007.
 </li>
-<li>Noboru Matsuda, William Cohen, Jonathan Sewall, Gustavo Lacerda and Ken Koedinger (2007): <a href="http://www.cs.cmu.edu/~mazda/Doc/UM2007/index.htm">Evaluating a simulated student using real students data for training and testing</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/um/um2007.html#MatsudaCSLK07">UM-2007</a>.
+<li>Noboru Matsuda, William Cohen, Jonathan Sewall, Gustavo Lacerda and Ken Koedinger (2007): <a href="http://www.cs.cmu.edu/~mazda/Doc/UM2007/index.htm">Evaluating a simulated student using real students data for training and testing</a> in UM-2007.
 </li>
-<li>Noboru Matsuda, William Cohen & Ken Koedinger (2006): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml/CMU-ML-06-106.pdf">What characterizes a better demonstration for cognitive modeling by demonstration? </a> in <a href="recent.html">CMU SCS Technical Report Series (CMU-ML-06-106)</a>.
+<li>Noboru Matsuda, William Cohen & Ken Koedinger (2006): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml/CMU-ML-06-106.pdf">What characterizes a better demonstration for cognitive modeling by demonstration? </a> in CMU SCS Technical Report Series (CMU-ML-06-106).
 </li>
-<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Kenneth R. Koedinger (2006): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml/CMU-ML-06-105.pdf">Applying Machine Learning to Cognitive Modeling for Cognitive Tutors</a> in <a href="recent.html">CMU SCS Technical Report Series (CMU-ML-06-105)</a>.
+<li>Noboru Matsuda, William W. Cohen, Jonathan Sewall, Kenneth R. Koedinger (2006): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml/CMU-ML-06-105.pdf">Applying Machine Learning to Cognitive Modeling for Cognitive Tutors</a> in CMU SCS Technical Report Series (CMU-ML-06-105).
 </li>
-<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/japan-ws-2005.pdf">An Intelligent Authoring System with Programming by Demonstration.</a> in <a href="recent.html">Proceedings of the Japan National Conference on Information and Systems in Education</a>.
+<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/japan-ws-2005.pdf">An Intelligent Authoring System with Programming by Demonstration.</a> in Proceedings of the Japan National Conference on Information and Systems in Education.
 </li>
-<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/ilp-2005-late.pdf">Building Cognitive Tutors with Programming by Demonstration</a> in <a href="recent.html">ILP-2005 (late-breaking paper)</a>.
+<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/ilp-2005-late.pdf">Building Cognitive Tutors with Programming by Demonstration</a> in ILP-2005 (late-breaking paper).
 </li>
-<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/aaai-ws-2005.pdf">Applying Programming by Demonstration in an Intelligent Authoring Tool for Cognitive Tutors</a> in <a href="recent.html">AAAI Workshop on Human Comprehensible Machine Learning</a>.
+<li>Noboru Matsuda, William Cohen & Ken Koedinger (2005): <a href="postscript/aaai-ws-2005.pdf">Applying Programming by Demonstration in an Intelligent Authoring Tool for Cognitive Tutors</a> in AAAI Workshop on Human Comprehensible Machine Learning.
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2090677-1;
-urchinTracker();
-</script>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-G.html">GNAT System</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 </body></html>
