--- a/pubs-e.html
+++ b/pubs-e.html
@@ -3,54 +3,48 @@
 </head>
 <body><h3>William W. Cohen's Papers: Explanation-Based Learning</h3>
 <ol>
-<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in <a href="recent.html">preparation</a>.
+<li>Danish Pruthi, Bhuwan Dhingra, Livio Baldini Soares, Michael Collins, Zachary C. Lipton, Graham Neubig, William W. Cohen (2020): <a href="https://arxiv.org/abs/2012.00893">Evaluating Explanations: How much do explanations from the teacher aid students?</a> in preparation.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2015): <a href="postscript/ijcai-2015.pdf">A Soft Version of Predicate Invention Based on Structured Sparsity</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/WangMC15">IJCAI-2015</a>.
+<li>William Yang Wang, Kathryn Mazaitis, and William W. Cohen (2015): <a href="postscript/ijcai-2015.pdf">A Soft Version of Predicate Invention Based on Structured Sparsity</a> in IJCAI-2015.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, Ni Lao, Tom Mitchell, and William W. Cohen (2015): <a href="postscript/mlj-2015-proppr.pdf">Efficient Inference and Learning in a Large Knowledge Base: Reasoning with Extracted Information using a Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://link.springer.com/article/10.1007%2Fs10994-015-5488-x">Machine Learning, 2015</a>.
+<li>William Yang Wang, Kathryn Mazaitis, Ni Lao, Tom Mitchell, and William W. Cohen (2015): <a href="postscript/mlj-2015-proppr.pdf">Efficient Inference and Learning in a Large Knowledge Base: Reasoning with Extracted Information using a Locally Groundable First-Order Probabilistic Logic</a> in Machine Learning, 2015.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/abs-1305-2254">CIKM-2013</a> <b>(Honorable Mention for Best Paper at CIKM-2013)</b>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/cikm-2013-proppr.pdf">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in CIKM-2013.<br><ul><li><font size=-1>Honorable Mention for Best Paper at CIKM-2013</font></ul>
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in <a href="http://doi.acm.org/10.1145/2505515.2505573">arxiv 1305.2254</a>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="http://arxiv.org/abs/1305.2254">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in arxiv 1305.2254.
 </li>
-<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <i>Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</i> in <a href="recent.html">ICML 2103 Workshop on Inferning</a>.
+<li>William Yang Wang, Kathryn Mazaitis, William W. Cohen (2013): <a href="postscript/">Programming with Personalized PageRank: A Locally Groundable First-Order Probabilistic Logic</a> in ICML 2103 Workshop on Inferning.
 </li>
-<li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <i>Probabilistic hill-climbing</i> in <i>Computational learning theory and natural learning systems (Volume II), MIT Press.</i>.
+<li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <a href="postscript/">Probabilistic hill-climbing</a> in Computational learning theory and natural learning systems (Volume II), MIT Press..
 </li>
-<li>William W. Cohen (1994): <i>Incremental abductive EBL</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml15.html#Cohen94">Machine Learning 15(1): 5-24 (1994)</a>.
+<li>William W. Cohen (1994): <a href="postscript/">Incremental abductive EBL</a> in Machine Learning 15(1): 5-24 (1994).
 </li>
-<li>William W. Cohen (1994): <a href="postscript/aij-grendel.pdf">Grammatically biased learning: learning logic programs using an explicit antecedent description language</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai68.html#Cohen94a">Artif. Intell. 68(2): 303-366 (1994)</a>.
+<li>William W. Cohen (1994): <a href="postscript/aij-grendel.pdf">Grammatically biased learning: learning logic programs using an explicit antecedent description language</a> in Artif. Intell. 68(2): 303-366 (1994).
 </li>
-<li>William W. Cohen (1992): <i>Using distribution-free learning theory to analyze solution path caching mechanisms</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ci/ci8.html#Cohen92">Computational Intelligence 8: 336-375 (1992)</a>.
+<li>William W. Cohen (1992): <a href="postscript/">Using distribution-free learning theory to analyze solution path caching mechanisms</a> in Computational Intelligence 8: 336-375 (1992).
 </li>
-<li>William W. Cohen (1992): <i>Desiderata for generalization-to-n algorithms</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aii/aii92.html#Cohen92">AII 1992: 140-150</a>.
+<li>William W. Cohen (1992): <a href="postscript/">Desiderata for generalization-to-n algorithms</a> in AII 1992: 140-150.
 </li>
-<li>William W. Cohen (1992): <a href="postscript/ml-92.ps">Compiling prior knowledge into an explicit bias</a> in <i>ICML 1992: 102-110</i>.
+<li>William W. Cohen (1992): <a href="postscript/ml-92.ps">Compiling prior knowledge into an explicit bias</a> in ICML 1992: 102-110.
 </li>
-<li>William W. Cohen (1992): <i>Abductive explanation based learning: A solution to the multiple inconsistent explanation problem</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml8.html#Cohen92">Machine Learning 8: 167-219 (1992)</a>.
+<li>William W. Cohen (1992): <a href="postscript/">Abductive explanation based learning: A solution to the multiple inconsistent explanation problem</a> in Machine Learning 8: 167-219 (1992).
 </li>
-<li>William W. Cohen (1993): <i>A Review of `Creating a Memory of Causal Relationships' by Michael Pazzani</i> in <i>Machine Learning (1993)</i>.
+<li>William W. Cohen (1993): <a href="postscript/">A Review of `Creating a Memory of Causal Relationships' by Michael Pazzani</a> in Machine Learning (1993).
 </li>
-<li>William W. Cohen (1991): <a href="postscript/ml-91.ps">The generality of overgenerality</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/ml1991.html#Cohen91">ICML 1991: 490-494</a>.
+<li>William W. Cohen (1991): <a href="postscript/ml-91.ps">The generality of overgenerality</a> in ICML 1991: 490-494.
 </li>
-<li>William W. Cohen (1990): <i>Learning from textbook knowledge: A case study</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai90.html#Cohen90"> AAAI 1990: 743-748</a>.
+<li>William W. Cohen (1990): <a href="postscript/">Learning from textbook knowledge: A case study</a> in  AAAI 1990: 743-748.
 </li>
-<li>William W. Cohen (1990): <a href="postscript/ml-90-axaebl.ps">Learning approximate control rules of high utility</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/ml1990.html#Cohen90a">ICML 1990: 268-276</a>.
+<li>William W. Cohen (1990): <a href="postscript/ml-90-axaebl.ps">Learning approximate control rules of high utility</a> in ICML 1990: 268-276.
 </li>
-<li>William W. Cohen (1990): <a href="postscript/ml-90-repshift.ps">An analysis of representation shift in concept learning</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/ml1990.html#Cohen90">ICML 1990: 104-112</a>.
+<li>William W. Cohen (1990): <a href="postscript/ml-90-repshift.ps">An analysis of representation shift in concept learning</a> in ICML 1990: 104-112.
 </li>
-<li>William W. Cohen (1990): <i>Learning from Examples and an "Abductive Theory"</i> in <i>Proc. of the 1990 AAAI Spring Symposium on Abduction</i>.
+<li>William W. Cohen (1990): <a href="postscript/">Learning from Examples and an "Abductive Theory"</a> in Proc. of the 1990 AAAI Spring Symposium on Abduction.
 </li>
-<li>William W. Cohen (1988): <i>Generalizing number and learning from multiple examples in explanation-based learning</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icml/ml1988.html#Cohen88">ICML 1988: 256-269</a>.
+<li>William W. Cohen (1988): <a href="postscript/">Generalizing number and learning from multiple examples in explanation-based learning</a> in ICML 1988: 256-269.
 </li>
-<li>William W. Cohen, Jack Mostow & Alex Borgida (1988): <i>Generalizing number in explanation-based learning</i> in <i>Proc. of the 1988 AAAI Spring Symposium on Explanation-Based Learning</i>.
+<li>William W. Cohen, Jack Mostow & Alex Borgida (1988): <a href="postscript/">Generalizing number in explanation-based learning</a> in Proc. of the 1988 AAAI Spring Symposium on Explanation-Based Learning.
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2090677-1;
-urchinTracker();
-</script>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-G.html">GNAT System</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 </body></html>
