--- a/pubs-f.html
+++ b/pubs-f.html
@@ -3,58 +3,52 @@
 </head>
 <body><h3>William W. Cohen's Papers: Formal Results</h3>
 <ol>
-<li>William Cohen (2009): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml2010/CMU-ML-10-102.pdf">Graph Walks and Graphical Models</a> in <a href="recent.html">SCS Technical Report Collection</a>.
+<li>William Cohen (2009): <a href="http://reports-archive.adm.cs.cmu.edu/anon/ml2010/CMU-ML-10-102.pdf">Graph Walks and Graphical Models</a> in SCS Technical Report Collection.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <i>Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing</i>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2003): <a href="postscript/ws-chap-2002.pdf">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in Web Document Analysis: Challenges and Opportunities, ed. Antonacopoulos & Hu, Word Scientific Publishing.
 </li>
-<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/www/www2002.html#CohenHJ02">WWW 2002: 232-241</a>.
+<li>William W. Cohen, Matthew Hurst & Lee S. Jensen (2002): <a href="http://www2002.org/CDROM/refereed/355/index.html">A Flexible Learning System for Wrapping Tables and Lists in HTML Documents</a> in WWW 2002: 232-241.
 </li>
-<li>William W. Cohen, David McAllester, and Henry Kautz (2000): <a href="postscript/kdd-2000.ps">Hardening Soft Information Sources</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2000.html#CohenKM00">KDD 2000: 255-259</a>.
+<li>William W. Cohen, David McAllester, and Henry Kautz (2000): <a href="postscript/kdd-2000.ps">Hardening Soft Information Sources</a> in KDD 2000: 255-259.
 </li>
-<li>William W. Cohen (1998): <i>Hardness Results for Learning First-Order Representations and Programming by Demonstration</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml30.html#Cohen98">Machine Learning 30(1): 57-87 (1998)</a>.
+<li>William W. Cohen (1998): <a href="postscript/NONE">Hardness Results for Learning First-Order Representations and Programming by Demonstration</a> in Machine Learning 30(1): 57-87 (1998).
 </li>
-<li>William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1996.html#Cohen96">COLT 1996: 29-40</a>.
+<li>William W. Cohen (1996): <a href="postscript/colt-96.ps">The Dual DFA Learning Problem: Hardness Results for Programming by Demonstration and Learning First-Order Representations (Extended Abstract)</a> in COLT 1996: 29-40.
 </li>
-<li>William W. Cohen (1995): <i>Pac-learning non-recursive prolog clauses</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ai/ai79.html#Cohen95">Artif. Intell. 79(1): 1-38 (1995)</a>.
+<li>William W. Cohen (1995): <a href="postscript/">Pac-learning non-recursive prolog clauses</a> in Artif. Intell. 79(1): 1-38 (1995).
 </li>
-<li>William W. Cohen and C. David Page Jr (1995): <i>Polynomial learnability and inductive logic programming: Methods and results</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ngc/ngc13.html#CohenP95">New Generation Comput. 13(3&4): 369-409 (1995)</a>.
+<li>William W. Cohen and C. David Page Jr (1995): <a href="postscript/">Polynomial learnability and inductive logic programming: Methods and results</a> in New Generation Comput. 13(3&4): 369-409 (1995).
 </li>
-<li>William W. Cohen (1995): <a href="http://www.cs.washington.edu/research/jair/home.html">Pac-learning recursive logic programs: Efficient algorithms</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair2.html#Cohen95">J. Artif. Intell. Res. (JAIR) 2: 501-539 (1995)</a>.
+<li>William W. Cohen (1995): <a href="http://www.cs.washington.edu/research/jair/home.html">Pac-learning recursive logic programs: Efficient algorithms</a> in J. Artif. Intell. Res. (JAIR) 2: 501-539 (1995).
 </li>
-<li>William W. Cohen (1995): <a href="http://www.cs.washington.edu/research/jair/home.html">Pac-learning recursive logic programs: Negative results</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/jair/jair2.html#Cohen95a">J. Artif. Intell. Res. (JAIR) 2: 541-573 (1995)</a>.
+<li>William W. Cohen (1995): <a href="http://www.cs.washington.edu/research/jair/home.html">Pac-learning recursive logic programs: Negative results</a> in J. Artif. Intell. Res. (JAIR) 2: 541-573 (1995).
 </li>
-<li>William W. Cohen (1994): <i>Pac-learning nondeterminate Clauses</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94a">AAAI 1994: 676-681</a>.
+<li>William W. Cohen (1994): <a href="postscript/NONE">Pac-learning nondeterminate Clauses</a> in AAAI 1994: 676-681.
 </li>
-<li>L. Thorn McCarty and William W. Cohen (1994): <i>The case for explicit exceptions</i> in <i>Methods of Logic in Computer Science, 1(1)</i>.
+<li>L. Thorn McCarty and William W. Cohen (1994): <a href="postscript/">The case for explicit exceptions</a> in Methods of Logic in Computer Science, 1(1).
 </li>
-<li>William W. Cohen and Haym Hirsh (1994): <a href="postscript/kr-94.ps">Learning the CLASSIC description logic: Theoretical and experimental results</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kr/kr94.html#CohenH94">KR 1994: 121-133</a>.
+<li>William W. Cohen and Haym Hirsh (1994): <a href="postscript/kr-94.ps">Learning the CLASSIC description logic: Theoretical and experimental results</a> in KR 1994: 121-133.
 </li>
-<li>William W. Cohen and Haym Hirsh (1994): <i>Learnability of description logics with equality constraints</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml17.html#CohenH94">Machine Learning 17(2-3): 169-199 (1994)</a>.
+<li>William W. Cohen and Haym Hirsh (1994): <a href="postscript/">Learnability of description logics with equality constraints</a> in Machine Learning 17(2-3): 169-199 (1994).
 </li>
-<li>William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai94-1.html#Cohen94">AAAI 1994: 142-148</a>.
+<li>William W. Cohen (1994): <a href="postscript/aaai-94-rc.ps">Recovering Software Specifications with Inductive Logic Programming</a> in AAAI 1994: 142-148.
 </li>
-<li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <i>Probabilistic hill-climbing</i> in <i>Computational learning theory and natural learning systems (Volume II), MIT Press.</i>.
+<li>William W. Cohen, Russell Greiner, and Dale Schuurmans (1994): <a href="postscript/">Probabilistic hill-climbing</a> in Computational learning theory and natural learning systems (Volume II), MIT Press..
 </li>
-<li>William W. Cohen (1994): <i>Incremental abductive EBL</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ml/ml15.html#Cohen94">Machine Learning 15(1): 5-24 (1994)</a>.
+<li>William W. Cohen (1994): <a href="postscript/">Incremental abductive EBL</a> in Machine Learning 15(1): 5-24 (1994).
 </li>
-<li>William W. Cohen (1993): <a href="postscript/aaai-93-cryptlim.ps">Cryptographic limitations on learning one-clause logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93">AAAI 1993: 80-85</a>.
+<li>William W. Cohen (1993): <a href="postscript/aaai-93-cryptlim.ps">Cryptographic limitations on learning one-clause logic programs</a> in AAAI 1993: 80-85.
 </li>
-<li>William W. Cohen (1993): <a href="postscript/aaai-93-force2.ps">Pac-learning a restricted class of recursive logic programs</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai93.html#Cohen93a">AAAI 1993: 86-92</a>.
+<li>William W. Cohen (1993): <a href="postscript/aaai-93-force2.ps">Pac-learning a restricted class of recursive logic programs</a> in AAAI 1993: 86-92.
 </li>
-<li>William W. Cohen and Haym Hirsh (1992): <i>Learnability of Description Logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/colt/colt1992.html#CohenH92">COLT 1992: 116-127</a>.
+<li>William W. Cohen and Haym Hirsh (1992): <a href="postscript/NONE">Learnability of Description Logics</a> in COLT 1992: 116-127.
 </li>
-<li>William W. Cohen, Alex Borgida, and Haym Hirsh (1992): <i>Computing least common subsumers in description logics</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/aaai/aaai92.html#CohenBH92">AAAI 1992: 754-760</a>.
+<li>William W. Cohen, Alex Borgida, and Haym Hirsh (1992): <a href="postscript/">Computing least common subsumers in description logics</a> in AAAI 1992: 754-760.
 </li>
-<li>William W. Cohen (1992): <i>Using distribution-free learning theory to analyze solution path caching mechanisms</i> in <a href="http://www.informatik.uni-trier.de/~ley/db/journals/ci/ci8.html#Cohen92">Computational Intelligence 8: 336-375 (1992)</a>.
+<li>William W. Cohen (1992): <a href="postscript/">Using distribution-free learning theory to analyze solution path caching mechanisms</a> in Computational Intelligence 8: 336-375 (1992).
 </li>
-<li>William W. Cohen (1993): <i>Learnability of Restricted Logic Programs</i> in <i>Proc. of the Third International Workshop on Inductive Logic Programming (ILP-93)</i>.
+<li>William W. Cohen (1993): <a href="postscript/">Learnability of Restricted Logic Programs</a> in Proc. of the Third International Workshop on Inductive Logic Programming (ILP-93).
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2090677-1;
-urchinTracker();
-</script>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-G.html">GNAT System</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 </body></html>
