--- a/pubs-l.html
+++ b/pubs-l.html
@@ -3,66 +3,60 @@
 </head>
 <body><h3>William W. Cohen's Papers: Topic Modeling</h3>
 <ol>
-<li>Bhuwan Dhingra, Hanxiao Liu, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1703.00993">A Comparative Study of Word Embeddings for Reading Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraLSC17">arxiv 1703.00993</a>.
+<li>Bhuwan Dhingra, Hanxiao Liu, Ruslan Salakhutdinov, and William W. Cohen (2017): <a href="http://arxiv.org/abs/1703.00993">A Comparative Study of Word Embeddings for Reading Comprehension</a> in arxiv 1703.00993.
 </li>
-<li>Bhuwan Dhingra, Hanxiao Liu, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1606.01549">Gated-Attention Readers for Text Comprehension</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/acl/DhingraLYCS17">ACL-2017</a>.
+<li>Bhuwan Dhingra, Hanxiao Liu, William W. Cohen, and Ruslan Salakhutdinov (2017): <a href="http://arxiv.org/abs/1606.01549">Gated-Attention Readers for Text Comprehension</a> in ACL-2017.
 </li>
-<li>Abhinav Maurya, Kenton Murray, Yandong Liu, Chris Dyer, William W. Cohen and Daniel B. Neill (2016): <a href="http://arxiv.org/abs/1602.04393">Semantic Scan: Detecting Subtle, Spatially Localized Events in Text Streams</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/MauryaMLDCN16">arxiv 1602.04393</a> <b>(won Yelp Dataset Challenge Grand Prize )</b>.
+<li>Abhinav Maurya, Kenton Murray, Yandong Liu, Chris Dyer, William W. Cohen and Daniel B. Neill (2016): <a href="http://arxiv.org/abs/1602.04393">Semantic Scan: Detecting Subtle, Spatially Localized Events in Text Streams</a> in arxiv 1602.04393.<br><ul><li><font size=-1>won Yelp Dataset Challenge Grand Prize </font></ul>
 </li>
-<li>Zhilin Yang, Ye Yuan, Yuexin Wu, Ruslan Salakhutdinov, William W. Cohen (2016): <a href="postscript/nips-2016.pdf">Encode, Review, and Decode: Reviewer Module for Caption Generation</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/YangYWSC16">NIPS-2016</a>.
+<li>Zhilin Yang, Ye Yuan, Yuexin Wu, Ruslan Salakhutdinov, William W. Cohen (2016): <a href="postscript/nips-2016.pdf">Encode, Review, and Decode: Reviewer Module for Caption Generation</a> in NIPS-2016.
 </li>
-<li>Bhuwan Dhingra, Zhong Zhou, Dylan Fitzpatrick, Michael Muehl and William W. Cohen (2016): <a href="postscript/acl-2016-bd.pdf">Tweet2Vec: Character-Based Distributed Representations for Social Media</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/corr/DhingraZFMC16">ACL-2016 (short paper)</a>.
+<li>Bhuwan Dhingra, Zhong Zhou, Dylan Fitzpatrick, Michael Muehl and William W. Cohen (2016): <a href="postscript/acl-2016-bd.pdf">Tweet2Vec: Character-Based Distributed Representations for Social Media</a> in ACL-2016 (short paper).
 </li>
-<li>Zhilin Yang, Jei Tang, and William W. Cohen (2016): <a href="postscript/ijcai-2016-zy.pdf">Multi-Modal Bayesian Embeddings for Learning Social Knowledge Graphs</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/ijcai/YangTC16">IJCAI-2016</a>.
+<li>Zhilin Yang, Jei Tang, and William W. Cohen (2016): <a href="postscript/ijcai-2016-zy.pdf">Multi-Modal Bayesian Embeddings for Learning Social Knowledge Graphs</a> in IJCAI-2016.
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen (2014): <a href="http://www.crcpress.com/product/isbn/9781466504080">Block-LDA: Jointly Modeling Entity-Annotated Text and Entity-Entity Links</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/reference/crc/BalasubramanyanC14">Handbook of Mixed Membership Models and Their Applications</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen (2014): <a href="http://www.crcpress.com/product/isbn/9781466504080">Block-LDA: Jointly Modeling Entity-Annotated Text and Entity-Entity Links</a> in Handbook of Mixed Membership Models and Their Applications.
 </li>
-<li>Tuan-Ahn Hoang and William W. Cohen and Ee-Peng Lim (2014): <a href="postscript/sdm-2014.pdf">On Modeling Community Behaviors and Sentiments in Microblogging</a> in <a href="http://dx.doi.org/10.1137/1.9781611973440.55">SDM-2014</a>.
+<li>Tuan-Ahn Hoang and William W. Cohen and Ee-Peng Lim (2014): <a href="postscript/sdm-2014.pdf">On Modeling Community Behaviors and Sentiments in Microblogging</a> in SDM-2014.
 </li>
-<li>Ramnath Balasubramanyan, Bhavana Dalvi and William W. Cohen (2013): <a href="postscript/ecml-2013-rb.pdf">From Topic Models to Semi-Supervised Learning: Biasing Mixed-membership Models to Exploit Topic-Indicative Features in Entity Clustering</a> in <a href="http://dx.doi.org/10.1007/978-3-642-40991-2_40">ECML/PKDD-2013</a>.
+<li>Ramnath Balasubramanyan, Bhavana Dalvi and William W. Cohen (2013): <a href="postscript/ecml-2013-rb.pdf">From Topic Models to Semi-Supervised Learning: Biasing Mixed-membership Models to Exploit Topic-Indicative Features in Entity Clustering</a> in ECML/PKDD-2013.
 </li>
-<li>Bhavana Dalvi and William W. Cohen and Jamie Callan (2013): <a href="postscript/ecml-2013-bdm.pdf">Exploratory Learning</a> in <a href="http://dx.doi.org/10.1007/978-3-642-40994-3_9">ECML/PKDD-2013</a>.
+<li>Bhavana Dalvi and William W. Cohen and Jamie Callan (2013): <a href="postscript/ecml-2013-bdm.pdf">Exploratory Learning</a> in ECML/PKDD-2013.
 </li>
-<li>Tuan-Ahn Hoang, William W. Cohen, Ee-Peng Lim, Doug Pierce, David Redlawsk (2013): <a href="postscript/asonam-2013.pdf">Politics, Sharing and Emotion in Microblogs</a> in <a href="http://doi.acm.org/10.1145/2492517.2492554">ANOMAN-2013</a>.
+<li>Tuan-Ahn Hoang, William W. Cohen, Ee-Peng Lim, Doug Pierce, David Redlawsk (2013): <a href="postscript/asonam-2013.pdf">Politics, Sharing and Emotion in Microblogs</a> in ANOMAN-2013.
 </li>
-<li>Dana Movshovitz-Attias and William W. Cohen (2013): <a href="postscript/acl-2013.pdf">Natural Language Models for Predicting Programming Comments</a> in <a href="http://aclweb.org/anthology/P/P13/P13-2007.pdf">ACL-2013 (short paper)</a>.
+<li>Dana Movshovitz-Attias and William W. Cohen (2013): <a href="postscript/acl-2013.pdf">Natural Language Models for Predicting Programming Comments</a> in ACL-2013 (short paper).
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen (2013): <a href="postscript/sdm-2013-rb.pdf">Regularization of Latent Variable Models to Obtain Sparsity</a> in <a href="http://dx.doi.org/10.1137/1.9781611972832.46">SDM-2013</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen (2013): <a href="postscript/sdm-2013-rb.pdf">Regularization of Latent Variable Models to Obtain Sparsity</a> in SDM-2013.
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen (2012): <a href="postscript/mlg-2012.pdf">Entropic Regularization of Mixed-membership Network Models using Pseudo-observations</a> in <a href="recent.html">MLG-2012</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen (2012): <a href="postscript/mlg-2012.pdf">Entropic Regularization of Mixed-membership Network Models using Pseudo-observations</a> in MLG-2012.
 </li>
-<li>Ramnath Balasubramanyan, William W. Cohen, Doug Pierce, and David P. Redlawsk (2012): <a href="postscript/icwsm-2012.pdf">Modeling Polarizing Topics: When Do Different Political Communities Respond Differently to the Same News?</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/conf/icwsm/BalasubramanyanCPR12">ICWSM-2012</a>.
+<li>Ramnath Balasubramanyan, William W. Cohen, Doug Pierce, and David P. Redlawsk (2012): <a href="postscript/icwsm-2012.pdf">Modeling Polarizing Topics: When Do Different Political Communities Respond Differently to the Same News?</a> in ICWSM-2012.
 </li>
-<li>Jacob Eisenstein, Tae Yano, William W. Cohen, Noah A. Smith, and Eric P. Xing (2011): <a href="postscript/emnlp-ws-2011.pdf">Structured Databases of Named Entities from Bayesian Nonparametrics</a> in <a href="recent.html">UNSUP-2011</a>.
+<li>Jacob Eisenstein, Tae Yano, William W. Cohen, Noah A. Smith, and Eric P. Xing (2011): <a href="postscript/emnlp-ws-2011.pdf">Structured Databases of Named Entities from Bayesian Nonparametrics</a> in UNSUP-2011.
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen (2011): <a href="postscript/sdm-2011-sub.pdf">Block-LDA: Jointly modeling entity-annotated text and entity-entity links</a> in <a href="http://dx.doi.org/10.1137/1.9781611972818.39">SDM-2011</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen (2011): <a href="postscript/sdm-2011-sub.pdf">Block-LDA: Jointly modeling entity-annotated text and entity-entity links</a> in SDM-2011.
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen (2010): <a href="postscript/icml-workshop-2010.pdf">Block-LDA: Jointly modeling entity-annotated text and entity-entity links</a> in <a href="recent.html">ICML-2010 Workshop on Topic Modeling</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen (2010): <a href="postscript/icml-workshop-2010.pdf">Block-LDA: Jointly modeling entity-annotated text and entity-entity links</a> in ICML-2010 Workshop on Topic Modeling.
 </li>
-<li>A. Ahmed, A. Arnold, L. P. Coelho, J. Kangas, A.-S. Sheikh, E. Xing, W. Cohen, and R. F. Murphy (2010): <a href="postscript/jws-2010.pdf">Structured Literature Image Finder: Parsing Text and Figures in Biomedical Literature</a> in <a href="http://dblp.uni-trier.de/rec/bibtex/journals/ws/AhmedACKSXCM10">Journal of Web Semantics</a>.
+<li>A. Ahmed, A. Arnold, L. P. Coelho, J. Kangas, A.-S. Sheikh, E. Xing, W. Cohen, and R. F. Murphy (2010): <a href="postscript/jws-2010.pdf">Structured Literature Image Finder: Parsing Text and Figures in Biomedical Literature</a> in Journal of Web Semantics.
 </li>
-<li>Ramnath Balasubramanyan and William W. Cohen and Matthew Hurst (2009): <a href="postscript/nips-2009-hots.pdf">Modeling corpora of timestamped documents using semisupervised nonparametric topic models</a> in <a href="recent.html">limbo</a>.
+<li>Ramnath Balasubramanyan and William W. Cohen and Matthew Hurst (2009): <a href="postscript/nips-2009-hots.pdf">Modeling corpora of timestamped documents using semisupervised nonparametric topic models</a> in limbo.
 </li>
-<li>Amr Ahmed, Andrew Arnold, Luis Pedro Coelho, Joshua Kangas, Abdul-Saboor Sheikk, Eric P. Xing, William W. Cohen, and Robert F. Murphy (2009): <a href="postscript/biolink-2009.pdf">Structured Literature Image Finder</a> in <a href="recent.html">Biolink-2009</a>.
+<li>Amr Ahmed, Andrew Arnold, Luis Pedro Coelho, Joshua Kangas, Abdul-Saboor Sheikk, Eric P. Xing, William W. Cohen, and Robert F. Murphy (2009): <a href="postscript/biolink-2009.pdf">Structured Literature Image Finder</a> in Biolink-2009.
 </li>
-<li>Amr Ahmed, Eric P. Xing, William W. Cohen, and Robert F. Murphy (2009): <a href="postscript/kdd-2009-ahmed.pdf">Structured Correspondence Topic Models for Mining Captioned Figures in Biological Literature</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2009.html#AhmedXCM09">KDD-2009</a>.
+<li>Amr Ahmed, Eric P. Xing, William W. Cohen, and Robert F. Murphy (2009): <a href="postscript/kdd-2009-ahmed.pdf">Structured Correspondence Topic Models for Mining Captioned Figures in Biological Literature</a> in KDD-2009.
 </li>
-<li>Tae Yano, Noah A. Smith, and William W. Cohen (2009): <a href="postscript/naacl2009-tae.pdf">Predicting Response to Political Blog Posts with Topic Models</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/naacl/naacl2009.html#YanoCS09">NAACL-2009</a>.
+<li>Tae Yano, Noah A. Smith, and William W. Cohen (2009): <a href="postscript/naacl2009-tae.pdf">Predicting Response to Political Blog Posts with Topic Models</a> in NAACL-2009.
 </li>
-<li>Ramnath Balasubramanyan, Frank Lin, William W. Cohen, Noah A. Smith, and Matthew Hurst (2009): <a href="postscript/icwsm-2009-saga-final.pdf">From Episodes to Sagas: Understanding the News by Identifying Temporally Related Story Sequences</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icwsm/icwsm2009.html#BalasubramanyanLCHS09">ICWSM-2009 (poster)</a>.
+<li>Ramnath Balasubramanyan, Frank Lin, William W. Cohen, Noah A. Smith, and Matthew Hurst (2009): <a href="postscript/icwsm-2009-saga-final.pdf">From Episodes to Sagas: Understanding the News by Identifying Temporally Related Story Sequences</a> in ICWSM-2009 (poster).
 </li>
-<li>Ramesh Nallapati, William W. Cohen, and John Lafferty (2007): <a href="postscript/icdm-workshop-2007-parallel.pdf">Parallelized Variational EM for Latent Dirichlet Allocation: An Experimental Evaluation of Speed and Scalability</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icdm/icdmw2007.html#NallapatiCL07">ICDM Workshop on High Performance Data Mining</a>.
+<li>Ramesh Nallapati, William W. Cohen, and John Lafferty (2007): <a href="postscript/icdm-workshop-2007-parallel.pdf">Parallelized Variational EM for Latent Dirichlet Allocation: An Experimental Evaluation of Speed and Scalability</a> in ICDM Workshop on High Performance Data Mining.
 </li>
-<li>Ramesh Nallapati, Amr Ahmed, William Cohen and Eric Xing (2007): <a href="postscript/icdm-workshop-2007-graphs.pdf">Sparse Word Graphs: A Scalable Algorithm for Capturing Word Correlations in Topic Models</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/icdm/icdmw2007.html#NallapatiACX07">ICDM Workshop on High Performance Data Mining</a>.
+<li>Ramesh Nallapati, Amr Ahmed, William Cohen and Eric Xing (2007): <a href="postscript/icdm-workshop-2007-graphs.pdf">Sparse Word Graphs: A Scalable Algorithm for Capturing Word Correlations in Topic Models</a> in ICDM Workshop on High Performance Data Mining.
 </li>
-<li>Ramesh Nallapati, William Cohen, Susan Ditmore, John Lafferty and Kin Ung (2007): <a href="postscript/topic-tomography-submitted.pdf">Multiscale Topic Tomography</a> in <a href="http://www.informatik.uni-trier.de/~ley/db/conf/kdd/kdd2007.html#NallapatiDLU07">KDD-2007</a>.
+<li>Ramesh Nallapati, William Cohen, Susan Ditmore, John Lafferty and Kin Ung (2007): <a href="postscript/topic-tomography-submitted.pdf">Multiscale Topic Tomography</a> in KDD-2007.
 </li>
 </ol>
-<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-G.html">GNAT System</a>|  By year: <a href="pubs.html">All papers</a>]</p>
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-2090677-1;
-urchinTracker();
-</script>
+<p align="center">[<a href="pubs-s.html">Selected papers</a>| By topic: <a href="pubs-G.html">GNAT System</a>|  <a href="pubs-a.html">Applications</a>|  <a href="pubs-c.html">Collaborative Filtering</a>|  <a href="pubs-d.html">Intelligent Tutoring</a>|  <a href="pubs-e.html">Explanation-Based Learning</a>|  <a href="pubs-f.html">Formal Results</a>|  <a href="pubs-g.html">Learning in Graphs</a>|  <a href="pubs-i.html">Inductive Logic Programming</a>|  <a href="pubs-k.html">Neural Knowledge Representation</a>|  <a href="pubs-l.html">Topic Modeling</a>|  <a href="pubs-m.html">Matching/Data Integration</a>|  <a href="pubs-n.html">Deep Learning</a>|  <a href="pubs-r.html">Rule Learning</a>|  <a href="pubs-t.html">Text Categorization</a>|  <a href="pubs-x.html">Info Extraction/Reading</a>|  By year: <a href="pubs.html">All papers</a>]</p>
 </body></html>
